--- a/backend/composer.json
+++ b/backend/composer.json
@@ -15,5 +15,13 @@
         "vlucas/phpdotenv": "^5.6",
         "firebase/php-jwt": "^6.11",
         "phpmailer/phpmailer": "^6.10"
+    },
+    "require-dev": {
+        "pestphp/pest": "^3.8"
+    },
+    "config": {
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     }
 }
